--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="blue-bg">
         <!--top bar-->
         <div class="header">
             <div class="logo-text">Header Logo</div>
@@ -13,9 +16,19 @@
             <div class="top">header link two</div>
             <div class="top">header link three</div>
         </div>
+        <div class="hero">
+            <div class="hero-txt">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="hero-img">
+                <img src="Sprite Screen.png" alt="placeholder image">
+            </div>
 
+        </div>
+    </div>
 
+</body>
 
-        
-    </body>
 </html>
