Information image section implemented

--- a/index.html
+++ b/index.html
@@ -8,25 +8,49 @@
 </head>
 
 <body>
-    <div class="blue-bg">
+    <div>
         <!--top bar-->
-        <div class="header">
+        <div class="header blue-bg">
             <div class="logo-text">Header Logo</div>
             <div class="top">header link one</div>
             <div class="top">header link two</div>
             <div class="top">header link three</div>
         </div>
-        <div class="hero">
+
+        <div class="hero blue-bg">
             <div class="hero-txt">
                 <div class="hero-main">This website is awesome</div>
-                <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller
+                    font and the color is lower contrast</div>
                 <button class="hero-button">Sign up</button>
             </div>
             <div class="hero-img">
                 <img src="Sprite Screen.png" alt="placeholder image">
             </div>
-
         </div>
+
+        <h1 class="random-info">Some random information.</h1>
+
+        <div class="boxes">
+            <div class="box1">
+                <img src="Sprite Screen.png" alt="blank img">
+                <p>some subtext describing the image</p>
+            </div>
+            <div class="box2">
+                <img src="Sprite Screen.png" alt="blank img">
+                <p>some subtext describing the image</p>
+            </div>
+            <div class="box3">
+                <img src="Sprite Screen.png" alt="blank img">
+                <p>some subtext describing the image</p>
+            </div>
+            <div class="box4">
+                <img src="Sprite Screen.png" alt="blank img">
+                <p>some subtext describing the image</p>
+            </div>
+        </div>
+
+
     </div>
 
 </body>
