Quote block implimented

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             </div>
         </div>
 
+        <div class="quote-box">
+            <p class="quote-text">"Your putting me on the spot. I can't think of anything, but twenty dollars is twenty dollars."</p>
+            <p class="quote-name">-Kevin (Co-Creator)</p>
+        </div>
 
     </div>
 
