Link block to game page implemented

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
             <p class="quote-name">-Kevin (Co-Creator)</p>
         </div>
 
+        <div class="action-box">
+            <div class="action-text">
+                <div>Click the button to play the game in browser</div>
+                <div>Hosted on Itch.io</div>
+            </div>
+            <a href="https://unstable-groot.itch.io/breaking-legs" class="action-button">Click Me!</a>
+        </div>
+
     </div>
 
 </body>
