--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             <a href="https://unstable-groot.itch.io/breaking-legs" class="action-button">Click Me!</a>
         </div>
 
+        <footer>Part of the Odin Project</footer>
+
     </div>
 
 </body>
