Update header with correct text and links

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div>
         <!--top bar-->
         <div class="header blue-bg">
-            <div class="logo-text">Header Logo</div>
-            <div class="top">header link one</div>
-            <div class="top">header link two</div>
-            <div class="top">header link three</div>
+            <div class="logo-text">Breaking Legs</div>
+            <a>Description</a>
+            <a>About The Devs</a>
+            <a href="https://unstable-groot.itch.io/breaking-legs">Play The Game</a>
         </div>
 
         <div class="hero blue-bg">
