pictures folder added and finished wording for hero section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Breaking legs homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,18 +14,16 @@
             <div class="logo-text">Breaking Legs</div>
             <a>Description</a>
             <a>About The Devs</a>
-            <a href="https://unstable-groot.itch.io/breaking-legs">Play The Game</a>
+            <a href="https://unstable-groot.itch.io/breaking-legs" target="_blank">Play The Game</a>
         </div>
 
         <div class="hero blue-bg">
             <div class="hero-txt">
-                <div class="hero-main">This website is awesome</div>
-                <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller
-                    font and the color is lower contrast</div>
-                <button class="hero-button">Sign up</button>
+                <div class="hero-main">Breaking Legs The Game</div>
+                <div class="hero-body">This is a game that was created by Kevin and Jacob during the 2022 VGDC fall game jam. The jam lasted 2 weeks and was the first unity game for both developers.</div>
             </div>
             <div class="hero-img">
-                <img src="Sprite Screen.png" alt="placeholder image">
+                <img src="pictures/Gameplay.png" alt="placeholder image">
             </div>
         </div>
 
@@ -33,19 +31,19 @@
 
         <div class="boxes">
             <div class="box1">
-                <img src="Sprite Screen.png" alt="blank img">
+                <img src="pictures/Sprite Screen.png" alt="blank img">
                 <p>some subtext describing the image</p>
             </div>
             <div class="box2">
-                <img src="Sprite Screen.png" alt="blank img">
+                <img src="pictures/Sprite Screen.png" alt="blank img">
                 <p>some subtext describing the image</p>
             </div>
             <div class="box3">
-                <img src="Sprite Screen.png" alt="blank img">
+                <img src="pictures/Sprite Screen.png" alt="blank img">
                 <p>some subtext describing the image</p>
             </div>
             <div class="box4">
-                <img src="Sprite Screen.png" alt="blank img">
+                <img src="pictures/Sprite Screen.png" alt="blank img">
                 <p>some subtext describing the image</p>
             </div>
         </div>
@@ -60,7 +58,7 @@
                 <div>Click the button to play the game in browser</div>
                 <div>Hosted on Itch.io</div>
             </div>
-            <a href="https://unstable-groot.itch.io/breaking-legs" class="action-button">Click Me!</a>
+            <a href="https://unstable-groot.itch.io/breaking-legs" target="_blank" class="action-button">Click Me!</a>
         </div>
 
         <footer>Part of the Odin Project</footer>
