Finished pictures and descriptions for the info section

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 
         <div class="boxes">
             <div class="box1">
-                <img src="pictures/Sprite Screen.png" alt="blank img">
-                <p>some subtext describing the image</p>
+                <img src="pictures/snortybase.png" alt="blank img">
+                <p>'Snorty' was heavily inspired by rick and morty</p>
             </div>
             <div class="box2">
-                <img src="pictures/Sprite Screen.png" alt="blank img">
-                <p>some subtext describing the image</p>
+                <img src="pictures/Crystal.png" alt="blank img">
+                <p>Unkown crystals drop from addicts</p>
             </div>
             <div class="box3">
-                <img src="pictures/Sprite Screen.png" alt="blank img">
-                <p>some subtext describing the image</p>
+                <img src="pictures/Soda.png" alt="blank img">
+                <p>Drink some soda to make the game harder</p>
             </div>
             <div class="box4">
-                <img src="pictures/Sprite Screen.png" alt="blank img">
-                <p>some subtext describing the image</p>
+                <img src="pictures/addict.png" alt="blank img">
+                <p>these poor addicts broke their legs</p>
             </div>
         </div>
 
