--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="quote-box">
-            <p class="quote-text">"Your putting me on the spot. I can't think of anything, but twenty dollars is twenty dollars."</p>
+            <p class="quote-text">"You're putting me on the spot. I can't think of anything, but twenty dollars is twenty dollars."</p>
             <p class="quote-name">-Kevin (Co-Creator)</p>
         </div>
 
